@@ -29,6 +29,7 @@
  * Deprecated FunctionalChaosResult.getComposedModel, MetaModelResult.getModel
  * Deprecated (Process)Sample::computeCenteredMoment in favor of computeCentralMoment
  * Deprecated Distribution::getCenteredMoment in favor of getCentralMoment
+ * Deprecated IterativeMoments::getCenteredMoments in favor of getCentralMoments
 
 === Documentation ===
  * Added example galleries at the end of API doc pages
